# mensa-cli

./: .gitignore  Makefile  Makefile.am  Makefile.in  Makefile.inc  autogen.sh  configure.ac  configure.in  defaults.c  main.c  mensa-output.c  mensa-output.h  mensa.c  mensa.h
data/: Makefile.am  mensa-tuc-rh-fnor-schema.xml  mensa-tuc-rh-schema.xml  mensa-tuc-rh-xmlfeed-schema.xml  mensa-tuc-strana-fnor-schema.xml  mensa-tuc-strana-schema.xml  mensa-tuc-strana-xmlfeed-schema.xml  mensarc
data/bash_completion.d/: Makefile.am  mensa
debian/: README  README.Debian  README.source  changelog  control  copyright  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  mensa-cli.cron.d.ex  mensa-cli.default.ex  mensa-cli.doc-base.EX  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  watch.ex
doc/: Doxyfile  man.mensa.1.in
doc/manual/: Makefile.am  mensa-schema.5.in  mensa.1.in  mensarc.5.in
libmensa/: Makefile  Makefile.in  mensa-data.h  mensa-helpers.c  mensa-helpers.h  mensa-schema.c  mensa-schema.h  mensa-time.h  mensa.c  mensa.h  mensa_helpers.c  mensa_helpers.h  mensaschema.c  mensaschema.h
scripts/: mensa-init.sh.in
src/: Makefile.am  cmd.h  cmd_config.c  cmd_help.c  cmd_info.c  cmd_show.c  commands.c  commands.h  defaults.c  defaults.h  main.c  mensa-output.c  mensa-output.h  utils.c  utils.h
src/libmensa/: Makefile.am  mensa-data.h  mensa-document.c  mensa-document.h  mensa-helpers.c  mensa-helpers.h  mensa-schema.c  mensa-schema.h  mensa-time.c  mensa-time.h  mensa.c  mensa.h
