lib_LTLIBRARIES = libmensa.la
AM_CPPFLAGS = ${CURL_CFLAGS}
libmensa_la_LIBADD = ${CURL_LIBS}
libmensa_la_SOURCES = mensa.c mensa.h mensa-data.h mensa-helpers.c \
                      mensa-helpers.h mensa-schema.c mensa-schema.h \
                      mensa-time.c mensa-time.h mensa-document.c mensa-document.h
